--- a/frontend/src/main/css/sudoku-input.sass
+++ b/frontend/src/main/css/sudoku-input.sass
@@ -1,6 +1,5 @@
 svg.sudoku-input
   g#interationRects
-    a:focus
-      rect
-        fill: mix($primary, $white, 30)
+    rect.active
+      fill: mix($primary, $white, 30)
 
