--- a/frontend/src/main/css/content.sass
+++ b/frontend/src/main/css/content.sass
@@ -20,6 +20,9 @@
 
 /* content-column */
 .content-column
+  display: flex
+  flex-direction: column
+  align-items: stretch
   max-width: 600px
   margin: 0 auto
   padding: 0.5em
