--- a/frontend/src/main/css/content.sass
+++ b/frontend/src/main/css/content.sass
@@ -1,8 +1,10 @@
 /* navbar */
 .top-bar
   background-color: #eee
-  box-shadow: 0 2px 3px rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.1)
   height: 52px
+
+  border-bottom: 1px solid $primary
+  background: $grey-lightest
 
   & > div
     display: flex
@@ -18,11 +20,14 @@
       & > *
         margin: 0px 8px
 
+      & > :first-child
+        margin: 0px 0px
+
+
 /* content-column */
 .content-column
   display: flex
   flex-direction: column
-  align-items: stretch
-  max-width: 600px
+  width: min(600px, calc(100vw - 1em))
   margin: 0 auto
   padding: 0.5em
