--- a/frontend/src/main/css/landing-page.sass
+++ b/frontend/src/main/css/landing-page.sass
@@ -2,6 +2,9 @@
   height: 100vh
   overflow: hidden
 
+  .box
+    border: 2px solid $primary
+
   .landing-page-modal
     min-height: 60vh
     display: flex
