improved finished animation a bit

--- a/frontend/src/main/css/finished-sudoku.sass
+++ b/frontend/src/main/css/finished-sudoku.sass
@@ -1,6 +1,24 @@
-@keyframes finished-animation
-  20%
-    fill: mix($white, $primary, 20)
-  40%
-    fill: $white
+@keyframes finished-animation1
+  0%
+    fill: rgba(0, 0, 0, 0)
+  5%
+    fill: rgba($primary, 1)
+  10%
+    fill: rgba(0, 0, 0, 0)
+
+@keyframes finished-animation2
+  0%
+    fill: rgba(0, 0, 0, 0)
+  5%
+    fill: rgba($primary, 0.5)
+  10%
+    fill: rgba(0, 0, 0, 0)
+
+@keyframes finished-animation3
+  0%
+    fill: rgba(0, 0, 0, 0)
+  5%
+    fill: rgba($primary, 0.25)
+  10%
+    fill: rgba(0, 0, 0, 0)
 
