--- a/frontend/src/main/css/bulma.sass
+++ b/frontend/src/main/css/bulma.sass
@@ -14,3 +14,6 @@ footer.footer
   margin-top: 4rem
   border-top: 1px solid $primary
   background: $grey-lightest
+
+.box
+  border: 2px solid $primary
