--- a/frontend/src/main/css/finished-sudoku.sass
+++ b/frontend/src/main/css/finished-sudoku.sass
@@ -1,24 +1,7 @@
-@keyframes finished-animation1
+@keyframes finished-animation
   0%
     fill: rgba(0, 0, 0, 0)
-  5%
+  50%
     fill: rgba($primary, 1)
-  10%
+  100%
     fill: rgba(0, 0, 0, 0)
-
-@keyframes finished-animation2
-  0%
-    fill: rgba(0, 0, 0, 0)
-  5%
-    fill: rgba($primary, 0.5)
-  10%
-    fill: rgba(0, 0, 0, 0)
-
-@keyframes finished-animation3
-  0%
-    fill: rgba(0, 0, 0, 0)
-  5%
-    fill: rgba($primary, 0.25)
-  10%
-    fill: rgba(0, 0, 0, 0)
-
