--- a/frontend/src/main/css/layout.sass
+++ b/frontend/src/main/css/layout.sass
@@ -4,8 +4,11 @@
   grid-template-rows: min-content auto min-content
   align-content: stretch
   grid-template-areas: "header header header" ". main ." ". footer ."
-  height: 100vh
-  overflow: hidden
+  min-height: 100vh
+
+  &.no-scroll
+    height: 100vh
+    overflow: hidden
 
   & > .grid-header, & > .top-bar
     grid-area: header
