--- a/frontend/src/main/css/sudoku-board.sass
+++ b/frontend/src/main/css/sudoku-board.sass
@@ -9,5 +9,8 @@ svg.sudoku-board
     &.wrong-value
       fill: rgba($red, 0.4)
 
-    &.highlight
+    &.highlight-weak
+      fill: rgba($primary, 0.2)
+
+    &.highlight-strong
       fill: rgba($primary, 0.4)
