--- a/frontend/src/main/css/animations.sass
+++ b/frontend/src/main/css/animations.sass
@@ -1,7 +1,5 @@
-@keyframes pulse
+@keyframes fade-in
   0%
-    transform: scale(1.00)
-  50%
-    transform: scale(1.10)
+    opacity: 0.2
   100%
-    transform: scale(1.00)
+    opacity: 1.0
