implemented wrong input hint

--- a/frontend/src/main/css/sudoku-board.sass
+++ b/frontend/src/main/css/sudoku-board.sass
@@ -9,6 +9,9 @@ svg.sudoku-board
     &.wrong-value
       fill: rgba($red, 0.4)
 
+    &.wrong-value-weak
+      fill: rgba($red, 0.2)
+
     &.highlight-weak
       fill: rgba($primary, 0.2)
 
